--- a/Training/Trading/requirements.txt
+++ b/Training/Trading/requirements.txt
@@ -1,13 +1,11 @@
-pandas
-numpy
-yfinance
-logging4
-matplotlib
-mplfinance
-SciPy
-mplfinance
-contextlib2
-bayesian-optimization
-deap
-pyswarm
-cma
+bayesian_optimization==1.4.3
+cma==3.3.0
+deap==1.4.1
+matplotlib==3.8.2
+mplfinance==0.12.10b0
+numpy==1.26.4
+pandas==2.2.0
+python-dotenv==1.0.1
+python_binance==1.0.19
+scipy==1.12.0
+yfinance==0.2.33
